# aw-mcp-rs

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs
src/models/: bucket.rs
src/tools/: buckets.rs  mod.rs
