[package]
name = "aw-mcp-server"
version = "0.1.0"
edition = "2024"
description = "MCP server for ActivityWatch API integration"
license = "MIT"

[[bin]]
name = "aw-mcp-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.5", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
